--- a/Tracie_data_analysis.ipynb
+++ b/Tracie_data_analysis.ipynb
@@ -178,6 +178,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>619029.000000</td>\n",
+       "      <td>619032.000000</td>\n",
+       "      <td>619032.000000</td>\n",
+       "      <td>619040.000000</td>\n",
+       "      <td>6.190400e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>83.023334</td>\n",
+       "      <td>83.778311</td>\n",
+       "      <td>82.256096</td>\n",
+       "      <td>83.043763</td>\n",
+       "      <td>4.321823e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>97.378769</td>\n",
+       "      <td>98.207519</td>\n",
+       "      <td>96.507421</td>\n",
+       "      <td>97.389748</td>\n",
+       "      <td>8.693610e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.620000</td>\n",
+       "      <td>1.690000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.590000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>40.220000</td>\n",
+       "      <td>40.620000</td>\n",
+       "      <td>39.830000</td>\n",
+       "      <td>40.245000</td>\n",
+       "      <td>1.070320e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>62.590000</td>\n",
+       "      <td>63.150000</td>\n",
+       "      <td>62.020000</td>\n",
+       "      <td>62.620000</td>\n",
+       "      <td>2.082094e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>94.370000</td>\n",
+       "      <td>95.180000</td>\n",
+       "      <td>93.540000</td>\n",
+       "      <td>94.410000</td>\n",
+       "      <td>4.284509e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2044.000000</td>\n",
+       "      <td>2067.990000</td>\n",
+       "      <td>2035.110000</td>\n",
+       "      <td>2049.000000</td>\n",
+       "      <td>6.182376e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                open           high            low          close  \\\n",
+       "count  619029.000000  619032.000000  619032.000000  619040.000000   \n",
+       "mean       83.023334      83.778311      82.256096      83.043763   \n",
+       "std        97.378769      98.207519      96.507421      97.389748   \n",
+       "min         1.620000       1.690000       1.500000       1.590000   \n",
+       "25%        40.220000      40.620000      39.830000      40.245000   \n",
+       "50%        62.590000      63.150000      62.020000      62.620000   \n",
+       "75%        94.370000      95.180000      93.540000      94.410000   \n",
+       "max      2044.000000    2067.990000    2035.110000    2049.000000   \n",
+       "\n",
+       "             volume  \n",
+       "count  6.190400e+05  \n",
+       "mean   4.321823e+06  \n",
+       "std    8.693610e+06  \n",
+       "min    0.000000e+00  \n",
+       "25%    1.070320e+06  \n",
+       "50%    2.082094e+06  \n",
+       "75%    4.284509e+06  \n",
+       "max    6.182376e+08  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allStock_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
