--- a/Tracie_data_analysis.ipynb
+++ b/Tracie_data_analysis.ipynb
@@ -311,6 +311,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connect to local database: \n",
+    "connection = \"postgres:Postgres@localhost:5432/stockPandas_db\"\n",
+    "engine = create_engine(f'postgresql://{connection}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put df into sql database format\n",
+    "\n",
+    "allStock_df.to_sql(name='stock_master', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "619040"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(allStock_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
