--- a/pandasDataManipulation-jy.ipynb
+++ b/pandasDataManipulation-jy.ipynb
@@ -461,19 +461,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "aea15779",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Industry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>88273</th>\n",
+       "      <td>2013-02-08</td>\n",
+       "      <td>36.50</td>\n",
+       "      <td>37.03</td>\n",
+       "      <td>36.49</td>\n",
+       "      <td>37.03</td>\n",
+       "      <td>8462351</td>\n",
+       "      <td>BMY</td>\n",
+       "      <td>Bristol-Myers Squibb Company</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88274</th>\n",
+       "      <td>2013-02-11</td>\n",
+       "      <td>36.85</td>\n",
+       "      <td>37.08</td>\n",
+       "      <td>36.80</td>\n",
+       "      <td>36.93</td>\n",
+       "      <td>5318733</td>\n",
+       "      <td>BMY</td>\n",
+       "      <td>Bristol-Myers Squibb Company</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88275</th>\n",
+       "      <td>2013-02-12</td>\n",
+       "      <td>36.91</td>\n",
+       "      <td>36.96</td>\n",
+       "      <td>36.52</td>\n",
+       "      <td>36.52</td>\n",
+       "      <td>6694758</td>\n",
+       "      <td>BMY</td>\n",
+       "      <td>Bristol-Myers Squibb Company</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88276</th>\n",
+       "      <td>2013-02-13</td>\n",
+       "      <td>36.49</td>\n",
+       "      <td>36.53</td>\n",
+       "      <td>36.03</td>\n",
+       "      <td>36.12</td>\n",
+       "      <td>11953431</td>\n",
+       "      <td>BMY</td>\n",
+       "      <td>Bristol-Myers Squibb Company</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88277</th>\n",
+       "      <td>2013-02-14</td>\n",
+       "      <td>36.06</td>\n",
+       "      <td>36.70</td>\n",
+       "      <td>36.04</td>\n",
+       "      <td>36.58</td>\n",
+       "      <td>7408473</td>\n",
+       "      <td>BMY</td>\n",
+       "      <td>Bristol-Myers Squibb Company</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619035</th>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>76.84</td>\n",
+       "      <td>78.27</td>\n",
+       "      <td>76.69</td>\n",
+       "      <td>77.82</td>\n",
+       "      <td>2982259</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619036</th>\n",
+       "      <td>2018-02-02</td>\n",
+       "      <td>77.53</td>\n",
+       "      <td>78.12</td>\n",
+       "      <td>76.73</td>\n",
+       "      <td>76.78</td>\n",
+       "      <td>2595187</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619037</th>\n",
+       "      <td>2018-02-05</td>\n",
+       "      <td>76.64</td>\n",
+       "      <td>76.92</td>\n",
+       "      <td>73.18</td>\n",
+       "      <td>73.83</td>\n",
+       "      <td>2962031</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619038</th>\n",
+       "      <td>2018-02-06</td>\n",
+       "      <td>72.74</td>\n",
+       "      <td>74.56</td>\n",
+       "      <td>72.13</td>\n",
+       "      <td>73.27</td>\n",
+       "      <td>4924323</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619039</th>\n",
+       "      <td>2018-02-07</td>\n",
+       "      <td>72.70</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>72.69</td>\n",
+       "      <td>73.86</td>\n",
+       "      <td>4534912</td>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>Zoetis</td>\n",
+       "      <td>Pharmaceuticals</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8811 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date   open   high    low  close    volume Symbol  \\\n",
+       "88273   2013-02-08  36.50  37.03  36.49  37.03   8462351    BMY   \n",
+       "88274   2013-02-11  36.85  37.08  36.80  36.93   5318733    BMY   \n",
+       "88275   2013-02-12  36.91  36.96  36.52  36.52   6694758    BMY   \n",
+       "88276   2013-02-13  36.49  36.53  36.03  36.12  11953431    BMY   \n",
+       "88277   2013-02-14  36.06  36.70  36.04  36.58   7408473    BMY   \n",
+       "...            ...    ...    ...    ...    ...       ...    ...   \n",
+       "619035  2018-02-01  76.84  78.27  76.69  77.82   2982259    ZTS   \n",
+       "619036  2018-02-02  77.53  78.12  76.73  76.78   2595187    ZTS   \n",
+       "619037  2018-02-05  76.64  76.92  73.18  73.83   2962031    ZTS   \n",
+       "619038  2018-02-06  72.74  74.56  72.13  73.27   4924323    ZTS   \n",
+       "619039  2018-02-07  72.70  75.00  72.69  73.86   4534912    ZTS   \n",
+       "\n",
+       "                                Name         Industry  \n",
+       "88273   Bristol-Myers Squibb Company  Pharmaceuticals  \n",
+       "88274   Bristol-Myers Squibb Company  Pharmaceuticals  \n",
+       "88275   Bristol-Myers Squibb Company  Pharmaceuticals  \n",
+       "88276   Bristol-Myers Squibb Company  Pharmaceuticals  \n",
+       "88277   Bristol-Myers Squibb Company  Pharmaceuticals  \n",
+       "...                              ...              ...  \n",
+       "619035                        Zoetis  Pharmaceuticals  \n",
+       "619036                        Zoetis  Pharmaceuticals  \n",
+       "619037                        Zoetis  Pharmaceuticals  \n",
+       "619038                        Zoetis  Pharmaceuticals  \n",
+       "619039                        Zoetis  Pharmaceuticals  \n",
+       "\n",
+       "[8811 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Dataframe with Pharmaceutical industries into json file\n",
     "pharm_df=merged_df.loc[merged_df[\"Industry\"] == \"Pharmaceuticals\"]\n",
+    "pharm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a12c715e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'jsonfiles/pharmaceuticals.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yn/xk1nllmx5_j6zx9bwj6p24kw0000gn/T/ipykernel_5762/842642904.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# conver Pharmaceutical df to json\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpharm_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'jsonfiles/pharmaceuticals.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_json\u001b[0;34m(self, path_or_buf, orient, date_format, double_precision, force_ascii, date_unit, default_handler, lines, compression, index, indent, storage_options)\u001b[0m\n\u001b[1;32m   2556\u001b[0m         \u001b[0mindent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindent\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2557\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2558\u001b[0;31m         return json.to_json(\n\u001b[0m\u001b[1;32m   2559\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2560\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36mto_json\u001b[0;34m(path_or_buf, obj, orient, date_format, double_precision, force_ascii, date_unit, default_handler, lines, compression, index, indent, storage_options)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpath_or_buf\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m         \u001b[0;31m# apply compression and byte/text conversion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 130\u001b[0;31m         with get_handle(\n\u001b[0m\u001b[1;32m    131\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcompression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m         ) as handles:\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    700\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    703\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'jsonfiles/pharmaceuticals.json'"
+     ]
+    }
+   ],
+   "source": [
+    "# conver Pharmaceutical df to json\n",
     "pharm_df.to_json(r'jsonfiles/pharmaceuticals.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "97bff6fd",
    "metadata": {},
    "outputs": [],
@@ -485,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f03dbf9d",
    "metadata": {},
    "outputs": [],
@@ -497,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2cb9f6d0",
    "metadata": {},
    "outputs": [],
@@ -508,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f3e47756",
    "metadata": {},
    "outputs": [],
@@ -542,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
