--- a/pandasDataManipulation-jy.ipynb
+++ b/pandasDataManipulation-jy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "31ba5c13",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b4f65475",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "9  2013-02-22  13.57  13.60  13.21  13.57   6071400    AAL"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f49f01ea",
    "metadata": {
     "scrolled": true
@@ -264,7 +264,7 @@
        "4   AACI   Armada Acquisition I              Blank Check / SPAC"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e856329b",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "4  American Airlines Group  Airlines  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "dc6c69e6-1766-4f42-92e1-fe31c2c841d6",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "[13130 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
+   "id": "95f50127",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['American Airlines Group', 'Apple', 'Advance Auto Parts', 'AbbVie',\n",
+       "       'AmerisourceBergen', 'Abbott Laboratories', 'Accenture', 'Adobe',\n",
+       "       'Analog Devices', 'Archer-Daniels-Midland Company',\n",
+       "       'Automatic Data Processing', 'Autodesk', 'Alliance Data Systems',\n",
+       "       'Ameren', 'American Electric Power Company', 'The AES Corporation',\n",
+       "       nan, 'Aflac', 'American International Group',\n",
+       "       'Apartment Investment & Management Company', 'Assurant',\n",
+       "       'Arthur J. Gallagher & Company', 'Akamai Technologies',\n",
+       "       'Albemarle', 'Align Technology', 'Alaska Air Group', 'Allegion',\n",
+       "       'The Allstate Corporation', 'Applied Materials',\n",
+       "       'Advanced Micro Devices', 'AMETEK', 'Amgen',\n",
+       "       'Affiliated Managers Group', 'Ameriprise Financial',\n",
+       "       'American Tower', 'Amazon.com', 'ANSYS', 'Anthem', 'Aon plc',\n",
+       "       'A. O. Smith', 'APA Corporation', 'Air Products & Chemicals',\n",
+       "       'Amphenol', 'Aptiv', 'Alexandria Real Estate Equities', 'Arconic',\n",
+       "       'Activision Blizzard', 'AvalonBay Communities', 'Broadcom',\n",
+       "       'Avery Dennison', 'American Water Works Company',\n",
+       "       'American Express Company', 'Acuity Brands', 'AutoZone',\n",
+       "       'Agilent Technologies', 'Bank of America', 'Baxter International',\n",
+       "       'The Boeing Company', 'Best Buy Co.',\n",
+       "       'Becton, Dickinson and Company', 'Franklin Resources',\n",
+       "       'Brown-Forman', 'Brighthouse Financial', 'Biogen',\n",
+       "       'Bank of New York Mellon', 'BlackRock', 'Ball Corporation',\n",
+       "       'Bristol-Myers Squibb Company', 'Berkshire Hathaway',\n",
+       "       'Boston Scientific', 'BorgWarner', 'Boston Properties',\n",
+       "       'Conagra Brands', 'Cardinal Health', 'Caterpillar',\n",
+       "       'Cboe Global Markets', 'Chubb', 'Crown Castle International',\n",
+       "       'Carnival', 'Cadence Design Systems', 'Cerner',\n",
+       "       'Citizens Financial Group', 'CF Industries Holdings',\n",
+       "       'Church & Dwight Company', 'Chesapeake Energy',\n",
+       "       'C.H. Robinson Worldwide', 'Charter Communications',\n",
+       "       'Cincinnati Financial', 'Cigna', 'The Clorox Company',\n",
+       "       'Colgate-Palmolive Company', 'Comerica', 'Comcast', 'CME Group',\n",
+       "       'Chipotle Mexican Grill', 'Cummins', 'CMS Energy', 'Centene',\n",
+       "       'CenterPoint Energy', 'Capital One Financial',\n",
+       "       'The Cooper Companies', 'ConocoPhillips', 'Costco Wholesale',\n",
+       "       'Coty Inc.', 'Campbell Soup Company', 'Salesforce.com',\n",
+       "       'Cisco Systems', 'CSX Corporation', 'Cintas',\n",
+       "       'Cognizant Technology Solutions', 'Citrix Systems', 'CVS Health',\n",
+       "       'Chevron', 'Citigroup', 'Delta Air Lines', 'Deere & Company',\n",
+       "       'Discover Financial Services', 'Quest Diagnostics',\n",
+       "       'Dollar General', 'D.R. Horton', 'Danaher', 'Discovery',\n",
+       "       'DISH Network', 'The Walt Disney Company', 'Digital Realty Trust',\n",
+       "       'Dollar Tree', 'Dover', 'Duke Realty', 'Darden Restaurants',\n",
+       "       'DTE Energy Company', 'Duke Energy', 'DaVita', 'Devon Energy',\n",
+       "       'DXC Technology Company', 'Dominion Energy', 'Electronic Arts',\n",
+       "       'eBay Inc.', 'Ecolab', 'Consolidated Edison', 'Equifax',\n",
+       "       'Edison International', 'The Estee Lauder Companies',\n",
+       "       'Eastman Chemical Company', 'Emerson Electric Company',\n",
+       "       'EOG Resources', 'Equinix', 'Equity Residential',\n",
+       "       'EQT Corporation', 'Essex Property Trust', 'Eversource Energy',\n",
+       "       'Eaton', 'Entergy', 'Edwards Lifesciences', 'Exelon',\n",
+       "       'Expeditors International of Washington', 'Expedia Group',\n",
+       "       'Extra Space Storage', 'Fastenal Company',\n",
+       "       'Fortune Brands Home & Security', 'Meta Platforms',\n",
+       "       'Freeport-McMoRan', 'FedEx', 'FirstEnergy', 'F5 Networks',\n",
+       "       'Fiserv', 'Fidelity National Information Services',\n",
+       "       'Fifth Third Bancorp', 'Fluor', 'Flowserve', 'Foot Locker',\n",
+       "       'FMC Corporation', 'Fox Corporation',\n",
+       "       'Federal Realty Investment Trust', 'TechnipFMC', 'Fortive',\n",
+       "       'Ford Motor Company', 'General Dynamics',\n",
+       "       'General Electric Company', 'Gilead Sciences', 'General Mills',\n",
+       "       'Corning', 'General Motors Company', 'Alphabet',\n",
+       "       'Genuine Parts Company', 'Global Payments', 'The Gap', 'Garmin',\n",
+       "       'The Goldman Sachs Group', 'The Goodyear Tire & Rubber Company',\n",
+       "       'W.W. Grainger', 'Halliburton Company', 'Hasbro',\n",
+       "       'Huntington Bancshares', 'Hanesbrands', 'HCA Healthcare',\n",
+       "       'HashiCorp', 'The Home Depot', 'Hess Corporation',\n",
+       "       'The Hartford Financial Services Group',\n",
+       "       'Huntington Ingalls Industries', 'Hilton Worldwide Holdings',\n",
+       "       'Harley-Davidson', 'Hologic', 'Honeywell International',\n",
+       "       'Hewlett-Packard Enterprise Company', 'HP Inc.',\n",
+       "       'Helmerich & Payne', 'H&R Block', 'Hormel Foods', 'Henry Schein',\n",
+       "       'Host Hotels & Resorts', 'The Hershey Company', 'Humana',\n",
+       "       'International Business Machines', 'Intercontinental Exchange',\n",
+       "       'IDEXX Laboratories', 'International Flavors & Fragrances',\n",
+       "       'Illumina', 'Incyte', 'Intel', 'Intuit',\n",
+       "       'The Interpublic Group of Companies',\n",
+       "       'International Paper Company', 'IQVIA Holdings', 'Iron Mountain',\n",
+       "       'Ingersoll Rand', 'Intuitive Surgical', 'Illinois Tool Works',\n",
+       "       'Gartner', 'Invesco', 'J.B. Hunt Transport Services',\n",
+       "       'Johnson Controls International', 'Johnson & Johnson',\n",
+       "       'Juniper Networks', 'JPMorgan Chase & Co.', 'Nordstrom', 'KeyCorp',\n",
+       "       'The Kraft Heinz Company', 'Kimco Realty', 'KLA Corporation',\n",
+       "       'Kimberly-Clark', 'Kinder Morgan', 'CarMax',\n",
+       "       'The Coca-Cola Company', 'The Kroger Company', \"Kohl's\",\n",
+       "       'Kellogg Company', 'Leggett & Platt', 'Lennar',\n",
+       "       'Laboratory Corporation of America Holdings', 'LKQ Corporation',\n",
+       "       'JX Luxventure', 'Eli Lilly and Company', 'Lockheed Martin',\n",
+       "       'Lincoln National', 'Alliant Energy', \"Lowe's Companies\",\n",
+       "       'Lam Research', 'Southwest Airlines Company',\n",
+       "       'LyondellBasell Industries NV', 'Loews',\n",
+       "       'Mid-America Apartment Communities', 'The Macerich Company',\n",
+       "       'Marriott International', 'Masco', 'Mattel', 'Mastercard',\n",
+       "       \"McDonald's\", 'Microchip Technology', 'McKesson', \"Moody's\",\n",
+       "       'Mondelez International', 'Medtronic plc.', 'MetLife',\n",
+       "       'MGM Resorts International', 'Mohawk Industries',\n",
+       "       'McCormick & Company', 'Martin Marietta Materials',\n",
+       "       'Marsh & McLennan Companies', '3M Company', 'Monster Beverage',\n",
+       "       'Monument Circle Acquisition', 'The Mosaic Company',\n",
+       "       'Altria Group', 'Marathon Petroleum', 'Merck & Co.',\n",
+       "       'Marathon Oil', 'Microsoft', 'Motorola Solutions',\n",
+       "       'Morgan Stanley', 'M&T Bank', 'Mettler-Toledo International',\n",
+       "       'Micron Technology', \"Macy's\", 'Navient',\n",
+       "       'Norwegian Cruise Line Holdings', 'Nasdaq', 'NextEra Energy',\n",
+       "       'Newmont', 'Netflix', 'NiSource', 'Nike, Inc.', 'Nielsen Holdings',\n",
+       "       'Northrop Grumman', 'NOV Inc.', 'NRG Energy', 'Norfolk Southern',\n",
+       "       'NetApp', 'Northern Trust', 'Nucor', 'NVIDIA', 'Newell Brands',\n",
+       "       'News Corporation', 'ONEOK', 'Omnicom Group', 'Oracle',\n",
+       "       \"O'Reilly Automotive\", 'Occidental Petroleum', 'Realty Income',\n",
+       "       'Paychex', \"People's United Financial\", 'PACCAR',\n",
+       "       'PG&E Corporation', 'Patterson Companies',\n",
+       "       'Public Service Enterprise Group', 'PepsiCo', 'Pfizer',\n",
+       "       'Principal Financial Group', 'The Progressive Corporation',\n",
+       "       'The Procter & Gamble Company', 'PulteGroup', 'Parker-Hannifin',\n",
+       "       'Packaging Corporation of America', 'PerkinElmer', 'Prologis',\n",
+       "       'Philip Morris International', 'The PNC Financial Services Group',\n",
+       "       'Pentair', 'Pinnacle West Capital', 'PPG Industries',\n",
+       "       'PPL Corporation', 'Perrigo Company', 'Prudential Financial',\n",
+       "       'Public Storage', 'Phillips 66', 'PVH Corp.', 'Quanta Services',\n",
+       "       'Pioneer Natural Resources Company', 'P10, Inc.',\n",
+       "       'PayPal Holdings', 'Qualcomm', 'Qorvo', 'Royal Caribbean Cruises',\n",
+       "       'Regeneron Pharmaceuticals', 'Regency Centers', 'Everest Re Group',\n",
+       "       'Regions Financial', 'Robert Half International',\n",
+       "       'Raymond James Financial', 'Ralph Lauren', 'ResMed',\n",
+       "       'Rockwell Automation', 'Roper Technologies', 'Ross Stores',\n",
+       "       'Range Resources', 'Republic Services', 'SBA Communications',\n",
+       "       'Starbucks', 'The Charles Schwab Corporation', 'Sealed Air',\n",
+       "       'The Sherwin-Williams Company', 'Signet Jewelers',\n",
+       "       'The J. M. Smucker Company', 'Schlumberger', 'SL Green Realty',\n",
+       "       'Snap-on', 'Synopsys', 'The Southern Company', 'S&P Global',\n",
+       "       'Simon Property Group', 'Stericycle', 'Sempra Energy',\n",
+       "       'State Street', 'Seagate Technology Holdings',\n",
+       "       'Constellation Brands', 'Skyworks Solutions',\n",
+       "       'Stanley Black & Decker', 'Synchrony Financial', 'Stryker',\n",
+       "       'Sysco', 'Molson Coors Beverage Company', 'TransDigm Group',\n",
+       "       'TE Connectivity', 'Target', 'The TJX Companies',\n",
+       "       'Thermo Fisher Scientific', 'Tapestry', 'TripAdvisor',\n",
+       "       'T. Rowe Price Group', 'The Travelers Companies',\n",
+       "       'Tractor Supply Company', 'Tyson Foods', 'Texas Instruments',\n",
+       "       'Textron', 'AT&T, Inc.', 'Under Armour',\n",
+       "       'United Airlines Holdings', 'UDR, Inc.',\n",
+       "       'Universal Health Services', 'Ulta Beauty', 'UnitedHealth Group',\n",
+       "       'Unum Group', 'Union Pacific', 'United Parcel Service',\n",
+       "       'United Rentals', 'U.S. Bancorp', 'VF Corporation',\n",
+       "       'Valero Energy', 'Vulcan Materials Company',\n",
+       "       'Vornado Realty Trust', 'Verisk Analytics', 'VeriSign',\n",
+       "       'Vertex Pharmaceuticals', 'Ventas', 'Verizon Communications',\n",
+       "       'Visa Inc.', 'Waters', 'Walgreens Boots Alliance',\n",
+       "       'Western Digital', 'WEC Energy Group', 'Wells Fargo & Company',\n",
+       "       'Whirlpool', 'The Williams Companies', 'Walmart',\n",
+       "       'Waste Management', 'WestRock Company',\n",
+       "       'The Western Union Company', 'Wynn Resorts',\n",
+       "       'Weyerhaeuser Company', 'Xcel Energy', 'XL Fleet', 'Exxon Mobil',\n",
+       "       'Dentsply Sirona', 'Xerox Holdings', 'Xylem', 'Yum! Brands',\n",
+       "       'Zimmer Biomet Holdings', 'Zions Bancorporation NA', 'Zoetis'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantity = one_year_df[\"Name\"].unique()\n",
+    "quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "62706add",
    "metadata": {},
    "outputs": [
@@ -883,7 +1061,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "aea15779",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1277,7 @@
        "[182 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "97bff6fd",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1494,7 @@
        "[182 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "f03dbf9d",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1712,7 @@
        "[390 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1726,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
+   "id": "469ce5f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BanksQuantity = banks_df[\"Name\"].nunique()\n",
+    "BanksQuantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "b02569d2",
    "metadata": {},
    "outputs": [],
@@ -1560,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "8e31a583-be05-4d18-be82-d1580b8c0882",
    "metadata": {},
    "outputs": [],
@@ -1570,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "aba14d8e-1dea-48db-ad1f-f6b4b3fcd77a",
    "metadata": {},
    "outputs": [],
