--- a/pandasDataManipulation-jy.ipynb
+++ b/pandasDataManipulation-jy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "31ba5c13",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,161 @@
     "import json\n",
     "\n",
     "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b8977897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Market Cap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>Agilent Technologies</td>\n",
+       "      <td>Life Sciences Tools &amp; Services</td>\n",
+       "      <td>4.154164e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>Alcoa</td>\n",
+       "      <td>Metals &amp; Mining</td>\n",
+       "      <td>1.661080e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAC</td>\n",
+       "      <td>Ares Acquisition</td>\n",
+       "      <td>Blank Check / SPAC</td>\n",
+       "      <td>1.467000e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AACG</td>\n",
+       "      <td>ATA Creativity Global</td>\n",
+       "      <td>Diversified Consumer Services</td>\n",
+       "      <td>4.298635e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AACI</td>\n",
+       "      <td>Armada Acquisition I</td>\n",
+       "      <td>Blank Check / SPAC</td>\n",
+       "      <td>2.039886e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AADI</td>\n",
+       "      <td>Aadi Bioscience</td>\n",
+       "      <td>Biotechnology</td>\n",
+       "      <td>3.725486e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AAIC</td>\n",
+       "      <td>Arlington Asset Investment</td>\n",
+       "      <td>Mortgage Real Estate Investment Trust...</td>\n",
+       "      <td>1.075756e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>American Airlines Group</td>\n",
+       "      <td>Airlines</td>\n",
+       "      <td>1.178875e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AAMC</td>\n",
+       "      <td>Altisource Asset Management</td>\n",
+       "      <td>Real Estate Management &amp; Development</td>\n",
+       "      <td>3.095673e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AAME</td>\n",
+       "      <td>Atlantic American</td>\n",
+       "      <td>Insurance</td>\n",
+       "      <td>6.052444e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Symbol                         Name  \\\n",
+       "0      A         Agilent Technologies   \n",
+       "1     AA                        Alcoa   \n",
+       "2    AAC             Ares Acquisition   \n",
+       "3   AACG        ATA Creativity Global   \n",
+       "4   AACI         Armada Acquisition I   \n",
+       "5   AADI              Aadi Bioscience   \n",
+       "6   AAIC   Arlington Asset Investment   \n",
+       "7    AAL      American Airlines Group   \n",
+       "8   AAMC  Altisource Asset Management   \n",
+       "9   AAME            Atlantic American   \n",
+       "\n",
+       "                                   Industry    Market Cap  \n",
+       "0            Life Sciences Tools & Services  4.154164e+10  \n",
+       "1                           Metals & Mining  1.661080e+10  \n",
+       "2                        Blank Check / SPAC  1.467000e+09  \n",
+       "3             Diversified Consumer Services  4.298635e+07  \n",
+       "4                        Blank Check / SPAC  2.039886e+08  \n",
+       "5                             Biotechnology  3.725486e+08  \n",
+       "6  Mortgage Real Estate Investment Trust...  1.075756e+08  \n",
+       "7                                  Airlines  1.178875e+10  \n",
+       "8      Real Estate Management & Development  3.095673e+07  \n",
+       "9                                 Insurance  6.052444e+07  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_name = \"resources/stocks_list.csv\"\n",
+    "stockname_df = pd.read_csv(stock_name)\n",
+    "stockname_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835b8936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stockname_df.to_html(\"stockname.html\",index = False, classes = [\"table\", \"table-hover\", \"table-striped\"])"
    ]
   },
   {
