--- a/pandasDataManipulation-jy.ipynb
+++ b/pandasDataManipulation-jy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "31ba5c13",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b8977897",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "9                                 Insurance  6.052444e+07  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "835b8936",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b4f65475",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "9  2013-02-22  13.57  13.60  13.21  13.57   6071400    AAL"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f49f01ea",
    "metadata": {
     "scrolled": true
@@ -431,7 +431,7 @@
        "4   AACI   Armada Acquisition I              Blank Check / SPAC  2.039886e+08"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "e856329b",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "4  American Airlines Group  Airlines  1.178875e+10  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "45e33718-7988-4752-9524-646aecec1b9b",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "[139162 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "dc6c69e6-1766-4f42-92e1-fe31c2c841d6",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1028,7 @@
        "[139162 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "95f50127",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "62706add",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1258,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "aea15779",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1282,7 @@
        "       'Perrigo Company', 'Zoetis'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "97bff6fd",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "f03dbf9d",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1537,7 @@
        "[4155 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "eeecaa19",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1767,7 @@
        "[277 rows x 10 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "9962ac58",
    "metadata": {},
    "outputs": [],
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "fbd3570a",
    "metadata": {},
    "outputs": [
@@ -2007,7 +2007,7 @@
        "[277 rows x 10 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "ebf3b57a",
    "metadata": {},
    "outputs": [],
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "9ddc5749",
    "metadata": {},
    "outputs": [
@@ -2245,7 +2245,7 @@
        "[277 rows x 10 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "3ea17f7b",
    "metadata": {},
    "outputs": [],
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "469ce5f6",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2282,7 @@
        "       'Zions Bancorporation NA'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2294,20 +2294,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "72e8d196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16110    22.53\n",
+       "16111    22.95\n",
+       "16112    22.68\n",
+       "16113    22.68\n",
+       "16114    22.55\n",
+       "Name: close, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# extract the close prices our to a list for boxplot to\n",
     "BAC = banks_df.loc[banks_df[\"Name\"]==\"Bank of America\",\"close\"]\n",
     "JPM = banks_df.loc[banks_df[\"Name\"]==\"JPMorgan Chase & Co.\",\"close\"]\n",
-    "WFG = banks_df.loc[banks_df[\"Name\"]== \"Wells Fargo & Company\",\"close\"]\n"
+    "WFG = banks_df.loc[banks_df[\"Name\"]== \"Wells Fargo & Company\",\"close\"]\n",
+    "BAC.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "c605bb47",
    "metadata": {},
    "outputs": [
@@ -2352,7 +2369,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
+   "id": "07a03dd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72128     87.23\n",
+      "72129     86.91\n",
+      "72130     86.11\n",
+      "72131     86.12\n",
+      "72132     86.18\n",
+      "          ...  \n",
+      "72400    116.87\n",
+      "72401    114.28\n",
+      "72402    108.80\n",
+      "72403    112.11\n",
+      "72404    112.87\n",
+      "Name: close, Length: 277, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "879013f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BAC max is : 32.5 and min is: 22.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "max = BAC.max()\n",
+    "min = BAC.min()\n",
+    "print(f\"BAC max is : {max} and min is: {min}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "f16e6cf1",
    "metadata": {},
    "outputs": [
@@ -2388,38 +2454,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "8018fa71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fc5c0c7c970>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5c0c7cc40>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3242250>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d32425e0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d324fb80>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d324ff10>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7fc5c0c7cfd0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d32353a0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3242970>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3242d00>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d32582e0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3258670>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7fc5c0c7c520>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3235e80>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d324f7f0>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7fc5d3235730>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d324f0d0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3258a00>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7fc5d3235ac0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d324f460>,\n",
-       "  <matplotlib.lines.Line2D at 0x7fc5d3258d90>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7feda386f520>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda386f7f0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda387fdc0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda388c190>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a4d730>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a4dac0>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7feda386fb80>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda386ff10>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda388c520>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda388c8b0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a4de50>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a56220>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7feda386f0d0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda387fa30>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a4d3a0>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7feda387f2e0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda388cc40>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a565b0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7feda387f670>,\n",
+       "  <matplotlib.lines.Line2D at 0x7feda388cfd0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fedb0a56940>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2446,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "b02569d2",
    "metadata": {},
    "outputs": [],
@@ -2458,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "5c7711c9-c6de-4fca-9574-c04173f5edf0",
    "metadata": {},
    "outputs": [],
@@ -2479,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "7c9aa061",
    "metadata": {},
    "outputs": [
@@ -2857,7 +2923,7 @@
        "16386  Bank of America    Banks  3.503370e+11  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2872,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "f4935013",
    "metadata": {},
    "outputs": [],
@@ -2885,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "64eb7a1d",
    "metadata": {},
    "outputs": [],
@@ -2898,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "cf6b9906",
    "metadata": {},
    "outputs": [],
@@ -2912,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "6df14be5",
    "metadata": {},
    "outputs": [],
@@ -2927,26 +2993,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "eb3816d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "SEA30days = tech_df.loc[(tech_df[\"Name\"]==\"Seagate Technology Holdings\"), :]\n",
     "SEA1mo = SEA30days.loc[SEA30days[\"date\"] > \"2018-01-06\"]\n",
-    "SEA1mo.to_csv(\"SEA1mo.csv\", index=False)"
+    "#SEA1mo.to_csv(\"SEA1mo.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "28716e9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "WTD30days = tech_df.loc[(tech_df[\"Name\"]==\"Western Digital\"), :]\n",
     "WTD1mo = WTD30days.loc[WTD30days[\"date\"] > \"2018-01-06\"]\n",
-    "WTD1mo.to_csv(\"WTD1mo.csv\", index=False)"
+    "#WTD1mo.to_csv(\"WTD1mo.csv\", index=False)"
    ]
   },
   {
